fix: update category pictures
different sizes of category pictures makes the layout offset behave unpredictable, as the pictures don't follow the size provided to its parent dom element. Providin pictures with a fixed size of 300x300 will make sure each category list takes up the exact same amount of space.
Changed mini-posts behaviour to not extend further than the maximum width of the screen, preventing the scrollbar to be visible on smaller screens

--- a/src/scss/category-post.scss
+++ b/src/scss/category-post.scss
@@ -5,6 +5,8 @@
 		@include vendor('flex-direction', 'column-reverse');
 		background: _palette(bg);
 		border: solid 1px _palette(border);
+		max-width:300px;
+		margin:1em;
 
 		.image {
 			overflow: hidden;
@@ -29,6 +31,7 @@
 			min-height: 4em;
 			position: relative;
 			@include vendor('flex-grow', '1');
+			border-top: solid 1px _palette(border);
 
 			h3 {
                 font-size: 0.9em;
@@ -50,6 +53,35 @@
 				position: absolute;
 				right: 2em;
 				top: 2em;
+			}
+		}
+	}
+
+	.mini-categories {
+		margin: 0 0 _size(element-margin) 0;
+
+		@include breakpoint(large) {
+			@include vendor('display', 'flex');
+			@include vendor('flex-wrap', 'wrap');
+			width: calc(100% - #{_size(element-margin)});
+
+			> * {
+				margin: _size(element-margin) _size(element-margin) 0 0;
+				width: calc(50% - #{_size(element-margin)});
+			}
+
+			> :nth-child(-n + 2) {
+				margin-top: 0;
+			}
+		}
+
+		@include breakpoint(xsmall) {
+			display: block;
+			width: 100%;
+
+			> * {
+				margin: 0 0 _size(element-margin) 0;
+				width: 100%;
 			}
 		}
 	}
